--- a/fly.toml
+++ b/fly.toml
@@ -23,3 +23,7 @@ primary_region = "lax"
   PYTHONUNBUFFERED = "1"
   STREAMLIT_SERVER_PORT = "8501"
   STREAMLIT_SERVER_ADDRESS = "0.0.0.0" 
+
+[mounts]
+  source = "data"
+  destination = "app/data"
